# askmycode

./: .dockerignore  .gitignore  AGENTIC_LOOP.md  BLOG.md  Dockerfile  LICENSE  README.md  config.json  pyproject.toml  skills-lock.json
src/: app.py  config.py  graph.py  logger.py  nodes.py  state.py  tools.py  utils.py
src/askmycode/: app.py  graph.py  logger.py  nodes.py  state.py  tools.py
tests/: conftest.py
tests/evals/: csv_logger.py  golden_set.json  judge.py  llm_scripts.py  mock_tools.py  test_e2e.py  test_g2_grounding.py  test_t1_sequencing.py
