[project]
name = "askmycode"
version = "0.1.0"
description = "askmycode — agentic code Q&A loop over local repos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "groq>=0.5",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "pydantic>=2.0",
]

[tool.uv]
package = false
