[project]
name = "askmycode"
version = "0.1.0"
description = "askmycode — agentic code Q&A loop over local repos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "groq>=0.5",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "eval_llm: requires GROQ_API_KEY; tests the live LLM with mocked or real tools",
    "e2e: full end-to-end eval with real LLM and real tools",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
